// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetCollection renders a table collection row 1`] = `
Array [
  <NameTableData
    id="test-snippet"
  />,
  <SubaccountTableData
    id="test-snippet"
  />,
  <UpdatedAtTableData
    id="test-snippet"
  />,
  <component
    id="test-snippet"
  />,
]
`;

exports[`SnippetCollection renders actions table data with toggleDelete callback 1`] = `
<ActionsTableData
  id="test-snippet"
  toggleDelete={[MockFunction]}
/>
`;

exports[`SnippetCollection renders table collection 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Name",
        "sortKey": [Function],
      },
      Object {
        "label": "Last Updated",
        "sortKey": [Function],
      },
    ]
  }
  defaultSortColumn={[Function]}
  defaultSortDirection="asc"
  filterBox={
    Object {
      "exampleModifiers": Array [
        "id",
        "name",
      ],
      "itemToStringKeys": Array [
        "name",
        "id",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "id": "test-snippet",
      },
    ]
  }
/>
`;

exports[`SnippetCollection renders table collection with actions column 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Name",
        "sortKey": [Function],
      },
      Object {
        "label": "Last Updated",
        "sortKey": [Function],
      },
      null,
    ]
  }
  defaultSortColumn={[Function]}
  defaultSortDirection="asc"
  filterBox={
    Object {
      "exampleModifiers": Array [
        "id",
        "name",
      ],
      "itemToStringKeys": Array [
        "name",
        "id",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "id": "test-snippet",
      },
    ]
  }
/>
`;

exports[`SnippetCollection renders table collection with subaccount column 1`] = `
<TableCollection
  columns={
    Array [
      Object {
        "label": "Name",
        "sortKey": [Function],
      },
      Object {
        "label": "Subaccount",
        "sortKey": [Function],
      },
      Object {
        "label": "Last Updated",
        "sortKey": [Function],
      },
    ]
  }
  defaultSortColumn={[Function]}
  defaultSortDirection="asc"
  filterBox={
    Object {
      "exampleModifiers": Array [
        "id",
        "name",
      ],
      "itemToStringKeys": Array [
        "name",
        "id",
        "subaccount_id",
      ],
      "show": true,
    }
  }
  getRowData={[Function]}
  pagination={true}
  rows={
    Array [
      Object {
        "id": "test-snippet",
      },
    ]
  }
/>
`;
